--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meed-server",
   "version": "0.1.0",
-  "description": "",
+  "description": "Server side application for MEED",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
