--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "node",
+    "express",
+    "api",
+    "reza will gib gud marks"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
