--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.11",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0"
   },
   "devDependencies": {
