--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "standard": "^11.0.1"
   }
 }
