--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server side application for MEED",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "standard",
     "start": "nodemon server.js"
   },
   "keywords": [
