--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.13",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3",
