--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server side application for MEED",
   "main": "index.js",
   "scripts": {
-    "test": "standard",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "keywords": [
@@ -21,7 +21,8 @@
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.13",
+    "mocha": "^5.1.1",
+    "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "passport": "^0.4.0"
   },
